force-app/main/default/objects/Product2/fields/RepercusionZZCC__c.field-meta.xml
<CustomField>
    <fullName>RepercusionZZCC__c</fullName>
    <formula>Tipo_de_inmueble__r.RepercusionZZCC__c</formula>
    <label>Repercusión ZZCC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>