force-app/main/default/objects/Product2/fields/sup_Aparcamientoensuperficie__c.field-meta.xml
<CustomField>
    <fullName>sup_Aparcamientoensuperficie__c</fullName>
    <formula>Tipo_de_inmueble__r.sup_aparcamientoensuperficie__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aparcamiento en superficie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>