force-app/main/default/objects/Product2/fields/sup_Aseo__c.field-meta.xml
<CustomField>
    <fullName>sup_Aseo__c</fullName>
    <formula>Tipo_de_inmueble__r.sup_Aseo__c</formula>
    <label>Aseo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>