force-app/main/default/objects/Product2/fields/sup_Bano_1__c.field-meta.xml
<CustomField>
    <fullName>sup_Bano_1__c</fullName>
    <formula>Tipo_de_inmueble__r.sup_Bano_1__c</formula>
    <label>Baño 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>