force-app/main/default/objects/Product2/fields/sup_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>sup_Distribuidor__c</fullName>
    <formula>Tipo_de_inmueble__r.sup_Distribuidor__c</formula>
    <label>Distribuidor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>