force-app/main/default/objects/Product2/fields/sup_Dormitorio_3__c.field-meta.xml
<CustomField>
    <fullName>sup_Dormitorio_3__c</fullName>
    <formula>Tipo_de_inmueble__r.sup_Dormitorio_3__c</formula>
    <label>Dormitorio 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>