force-app/main/default/objects/Product2/fields/sup_Escaleras__c.field-meta.xml
<CustomField>
    <fullName>sup_Escaleras__c</fullName>
    <formula>Tipo_de_inmueble__r.Escaleras__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escaleras</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>