force-app/main/default/objects/Product2/fields/sup_porche__c.field-meta.xml
<CustomField>
    <fullName>sup_porche__c</fullName>
    <description>Campo fórmula que se informa directamente desde tipo de inmueble</description>
    <formula>Tipo_de_inmueble__r.sup_porche__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porche</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>