force-app/main/default/objects/Product2/fields/sup_Salon__c.field-meta.xml
<CustomField>
    <fullName>sup_Salon__c</fullName>
    <formula>Tipo_de_inmueble__r.sup_Salon__c</formula>
    <label>Salón</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>