force-app/main/default/objects/Product2/fields/sup_Salon_Cocina_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>sup_Salon_Cocina_Distribuidor__c</fullName>
    <formula>Tipo_de_inmueble__r.Salon_cocina_distribuidor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salon - Cocina- Distribuidor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>