force-app/main/default/objects/Product2/fields/sup_Salon_Secundario__c.field-meta.xml
<CustomField>
    <fullName>sup_Salon_Secundario__c</fullName>
    <formula>Tipo_de_inmueble__r.Salon_Secundario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salón Secundario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>