force-app/main/default/objects/Product2/fields/SupConstTotal__c.field-meta.xml
<CustomField>
    <fullName>SupConstTotal__c</fullName>
    <formula>Tipo_de_inmueble__r.SupConstTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sup. Const. Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>