force-app/main/default/objects/Product2/fields/SupConstTotalZZCCZExtDescubierta__c.field-meta.xml
<CustomField>
    <fullName>SupConstTotalZZCCZExtDescubierta__c</fullName>
    <formula>Tipo_de_inmueble__r.SupConstTotalZZCCZExtDescubierta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sup.Const total +ZZCC +Z.Ext.Descubierta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>