force-app/main/default/objects/Product2/fields/SupConstZZCCGaraje__c.field-meta.xml
<CustomField>
    <fullName>SupConstZZCCGaraje__c</fullName>
    <formula>Tipo_de_inmueble__r.SupConstZZCCGaraje__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sup. Const + ZZCC garaje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>