force-app/main/default/objects/Product2/fields/SupConstZZCCTrastero__c.field-meta.xml
<CustomField>
    <fullName>SupConstZZCCTrastero__c</fullName>
    <formula>Tipo_de_inmueble__r.SupConstZZCCTrastero__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sup. Const + ZZCC trastero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>