force-app/main/default/objects/Product2/fields/Superficie_Construida_ZZCC_sin_Zon_Exte__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Construida_ZZCC_sin_Zon_Exte__c</fullName>
    <formula>Tipo_de_inmueble__r.Superficie_Construida_con_ZZCC_sin_Zon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superficie Construida ZZCC sin Zon.Exte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>