force-app/main/default/objects/Product2/fields/Superficie_Terrazas_Cubiertas__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Terrazas_Cubiertas__c</fullName>
    <formula>Tipo_de_inmueble__r.Superficie_Terrazas_Cubiertas__c</formula>
    <label>Superficie Terrazas Cubiertas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>