force-app/main/default/objects/Product2/fields/Superficie_Util_m2__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Util_m2__c</fullName>
    <formula>Tipo_de_inmueble__r.Superficie_Util_m2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superficie Util m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>