force-app/main/default/objects/Product2/fields/SuperficieConstZZCCTCub100__c.field-meta.xml
<CustomField>
    <fullName>SuperficieConstZZCCTCub100__c</fullName>
    <formula>Tipo_de_inmueble__r.SuperficieConstZZCCTCub100__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superficie Const. + ZZCC + T.Cub 100%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>