force-app/main/default/objects/Product2/fields/SuperficieTerrazasDescubiertas2__c.field-meta.xml
<CustomField>
    <fullName>SuperficieTerrazasDescubiertas2__c</fullName>
    <formula>Tipo_de_inmueble__r.SuperficieTerrazasDescubiertas2__c</formula>
    <label>Superficie Terrazas Descubiertas 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>