force-app/main/default/objects/Product2/fields/SuperficieUtilCon100TerrCub__c.field-meta.xml
<CustomField>
    <fullName>SuperficieUtilCon100TerrCub__c</fullName>
    <formula>Tipo_de_inmueble__r.SuperficieUtilCon100TerrCub__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superficie Util con 100% Terr.Cub</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>