force-app/main/default/objects/Product2/fields/Tarifa_V1__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_V1__c</fullName>
    <label>Tarifa V1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>