force-app/main/default/objects/Product2/fields/Tarifa_V1_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_V1_Comercial__c</fullName>
    <formula>IF(
AND(OR($Profile.Name == &apos;Comercial API&apos;, $Profile.Name == &apos;Comercial&apos;), Mostrar_precio_a_comerciales__c == false),
NULL,
Tarifa_V1__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarifa V1 Comercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>