force-app/main/default/objects/Product2/fields/Tipo_de_inmueble__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_inmueble__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de inmueble</label>
    <referenceTo>Tipo_de_inmueble__c</referenceTo>
    <relationshipLabel>Inmuebles</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>