force-app/main/default/objects/Product2/fields/Tipo_de_via__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_via__c</fullName>
    <formula>TEXT(Promocion__r.Tipo_via__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Vía</label>
    <type>Text</type>
</CustomField>