force-app/main/default/objects/Product2/fields/Tipo_de_vivienda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_vivienda__c</fullName>
    <label>Tipo de vivienda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipos_de_vivienda</valueSetName>
    </valueSet>
</CustomField>