force-app/main/default/objects/Product2/fields/Tipologia_de_vivienda__c.field-meta.xml
<CustomField>
    <fullName>Tipologia_de_vivienda__c</fullName>
    <label>Tipología de vivienda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ático</fullName>
            </value>
            <value>
                <fullName>Piso</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
            <value>
                <fullName>Chalet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>