force-app/main/default/objects/Product2/fields/Tipologia_Vivienda_Garaje_Trastero_Local__c.field-meta.xml
<CustomField>
    <fullName>Tipologia_Vivienda_Garaje_Trastero_Local__c</fullName>
    <formula>TEXT(Tipo_de_inmueble__r.Tipo__c)</formula>
    <label>Tipología</label>
    <type>Text</type>
</CustomField>