force-app/main/default/objects/Product2/fields/TipoPlazaGaraje__c.field-meta.xml
<CustomField>
    <fullName>TipoPlazaGaraje__c</fullName>
    <formula>Tipo_de_inmueble__r.TipoPlazaGaraje__c</formula>
    <label>Tipo plaza garaje</label>
    <type>Text</type>
</CustomField>