force-app/main/default/objects/Product2/fields/TipoTrastero__c.field-meta.xml
<CustomField>
    <fullName>TipoTrastero__c</fullName>
    <formula>Tipo_de_inmueble__r.TipoTrastero__c</formula>
    <label>Tipo trastero</label>
    <type>Text</type>
</CustomField>