force-app/main/default/objects/Product2/fields/TOMO__c.field-meta.xml
<CustomField>
    <fullName>TOMO__c</fullName>
    <label>TOMO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>