force-app/main/default/objects/Product2/fields/Trastero_Instalaciones__c.field-meta.xml
<CustomField>
    <fullName>Trastero_Instalaciones__c</fullName>
    <formula>Tipo_de_inmueble__r.Trastero_Instalaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trastero/Instalaciones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>