force-app/main/default/objects/Product2/fields/UltimoModificadorEstado__c.field-meta.xml
<CustomField>
    <fullName>UltimoModificadorEstado__c</fullName>
    <label>UltimoModificadorEstado</label>
    <length>18</length>
    <type>Text</type>
</CustomField>