force-app/main/default/objects/Product2/fields/Vestibulo__c.field-meta.xml
<CustomField>
    <fullName>Vestibulo__c</fullName>
    <formula>Tipo_de_inmueble__r.Vestibulo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vestíbulo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>