force-app/main/default/objects/Product2/fields/Vistas__c.field-meta.xml
<CustomField>
    <fullName>Vistas__c</fullName>
    <label>Vistas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vistas_del_inmueble</valueSetName>
    </valueSet>
</CustomField>