force-app/main/default/objects/Product2/fields/WebAvinita__c.field-meta.xml
<CustomField>
    <fullName>WebAvinita__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web de Avinita</label>
    <type>Checkbox</type>
</CustomField>