force-app/main/default/objects/Product2/recordTypes/Inmueble.recordType-meta.xml
<RecordType>
    <fullName>Inmueble</fullName>
    <active>true</active>
    <label>Inmueble</label>
</RecordType>