force-app/main/default/objects/Product2/validationRules/No_cambiar_tarifa_si_Estado_no_es_Libre.validationRule-meta.xml
<ValidationRule>
    <fullName>No_cambiar_tarifa_si_Estado_no_es_Libre</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(  Precio__c ),
NOT ISPICKVAL(Estado__c , &quot;Libre&quot;),
NOT ISPICKVAL(Estado__c , &quot;Asociado&quot;),
NOT ISPICKVAL(Estado__c , &quot;Bloqueado temporalmente&quot;),
NOT ISPICKVAL(Estado__c , &quot;Cancelado&quot;)
)</errorConditionFormula>
    <errorMessage>El Inmueble no está &quot;Libre&quot; por lo que no puede cambiar su tarifa.</errorMessage>
</ValidationRule>