force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Estado__c</columns>
    <columns>Precio__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>izara</value>
    </filters>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Libre</value>
    </filters>
    <label>Todos los productos</label>
</ListView>