force-app/main/default/objects/Product2/listViews/Garajes_Canet.listView-meta.xml
<ListView>
    <fullName>Garajes_Canet</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Tarifa_V0__c</columns>
    <columns>Tarifa_V1__c</columns>
    <columns>Precio__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipologia_Vivienda_Garaje_Trastero_Local__c</field>
        <operation>equals</operation>
        <value>garaje</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>canet</value>
    </filters>
    <label>Garajes</label>
</ListView>